# astrocyte

./: .gitignore  .pre-commit-config.yaml  BENCH_PARITY.yaml  CHANGELOG.md  Makefile  README.md  RELEASING.md  renovate.json
adapters-ingestion-py/astrocyte-ingestion-github/: README.md  pyproject.toml
adapters-ingestion-py/astrocyte-ingestion-github/astrocyte_ingestion_github/: __init__.py  source.py
adapters-ingestion-py/astrocyte-ingestion-github/tests/: test_github_poll_source.py
adapters-ingestion-py/astrocyte-ingestion-redis/: README.md  pyproject.toml
adapters-ingestion-py/astrocyte-ingestion-redis/astrocyte_ingestion_redis/: __init__.py  source.py
adapters-ingestion-py/astrocyte-ingestion-redis/tests/: test_redis_stream_source.py
adapters-ingestion-py/astrocyte-ingestion-s3/: README.md  pyproject.toml
adapters-ingestion-py/astrocyte-ingestion-s3/astrocyte_ingestion_s3/: __init__.py  _extract.py  source.py
adapters-ingestion-py/astrocyte-ingestion-s3/tests/: test_extract.py  test_s3_sources.py
adapters-integration-py/astrocyte-integration-llm-wrapper/: README.md  pyproject.toml
adapters-integration-py/astrocyte-integration-llm-wrapper/astrocyte_integration_llm_wrapper/: __init__.py  wrapper.py
adapters-integration-py/astrocyte-integration-llm-wrapper/tests/: test_wrapper.py
adapters-integration-py/astrocyte-integration-tavus/: README.md  pyproject.toml
adapters-llm-py/astrocyte-llm-litellm/: README.md  pyproject.toml
adapters-llm-py/astrocyte-llm-litellm/astrocyte_llm_litellm/: __init__.py
adapters-py/astrocyte-neo4j/: README.md  pyproject.toml
adapters-py/astrocyte-qdrant/: pyproject.toml
adapters-storage-py/astrocyte-age/: pyproject.toml
adapters-storage-py/astrocyte-elasticsearch/: pyproject.toml
adapters-storage-py/astrocyte-pgvector/: README.md  pyproject.toml
adapters-storage-py/astrocyte-postgres/: README.md  pyproject.toml
astrocyte-py/: Makefile  README.md  pyproject.toml
astrocyte-py/astrocyte/: __init__.py  _astrocyte.py  _discovery.py  _hooks.py  _ingest_spi.py  _log_safety.py  _mcp_identity.py  _multi_bank.py  _output_scanner.py  _policy.py  _provider_dispatch.py  _recall_params.py  _validation.py  analytics.py  audit.py  cli.py  config.py  db_budget.py  disposition.py  errors.py  hybrid.py  identity.py  identity_jwt.py  lifecycle.py  mcp.py  operation_metadata.py  portability.py  provider.py  task_backend.py  tenancy.py  types.py
astrocyte-py/benchmarks/: ablation-matrix.json  baselines-openai.json  baselines-test-provider.json  config-baseline.yaml  config-fast-recall-m10.yaml  config-fast-recall.yaml  config-hindsight-balanced.yaml  config-hindsight-parity.yaml  config-hindsight-style.yaml  config-litellm.yaml  config-quality-max.yaml  config.yaml  gates-baseline.json  gates-hindsight-informed.json
astrocyte-py/docs/: ce-me-vs-hindsight-architecture.md
astrocyte-py/examples/: astrocyte-mip.yaml  managed_agents.py  mip-code.yaml  mip-enterprise-identity.yaml  mip.yaml
astrocyte-py/scripts/: _bench_usage.py  _r2_client.py  analyze_benchmark_failures.py  archive_bench_results.py  backfill_archive.py  bench_pageindex_lme.py  bench_pageindex_locomo.py  check_benchmark_gates.py  check_benchmark_regression.py  fetch_bench_results.py  filter_codeql.py  m33_3_dateparser_audit.py  mark_shipped.py  profile_retain.py  promote_benchmark_baseline.py  release_mark.py  run_benchmark.py  run_benchmarks.py  run_eval.py  tag_shipped.py  wipe_bad_m18b_archive.py
astrocyte-py/tests/: conftest.py  test_access_grants_config.py  test_agentic_reflect.py  test_analytics.py  test_astrocyte_tier1.py  test_astrocyte_tier2.py  test_audit.py  test_authz_read_endpoints.py  test_barriers.py  test_barriers_unit.py  test_bench_usage.py  test_bugfixes.py  test_check_benchmark_gates.py  test_check_benchmark_regression.py  test_chunking.py  test_cli_mip.py  test_competitor_adapters.py  test_compliance_profiles.py  test_config.py  test_config_m2.py  test_conversation_engine.py  test_cross_encoder_device.py  test_cross_encoder_rerank.py  test_db_budget.py  test_delta_ops.py  test_design_improvements.py  test_discovery_entry_points.py  test_disposition.py  test_dlp.py  test_document_engine.py  test_document_engine_phase2.py  test_document_postprocess.py  test_e2e_claude_agent_sdk.py  test_e2e_claude_managed_agents.py  test_e2e_pipeline_integration.py  test_e2e_tavus_cvi_composer.py  test_entity_cooccurrence_cap.py  test_entity_resolution_cascade.py  test_errors.py  test_escalation.py  (+154 more)
astrocyte-services-py/astrocyte-gateway-py/: BRANCH-PROTECTION.md  Dockerfile  Dockerfile.release  README.md  RELEASE.md  config.example.yaml  openapi.json  pyproject.toml
astrocyte-services-py/astrocyte-pgvector/: README.md  pyproject.toml
astrocyte-services-py/astrocyte-rest/: Dockerfile  README.md  config.example.yaml  pyproject.toml
astrocyte-services-py/astrocyte-stack/: README.md  pyproject.toml
astrocyte-services-py/astrocytes-pgvector/: README.md  pyproject.toml
astrocytes-py/: Makefile  README.md  pyproject.toml
astrocytes-py/astrocytes/: __init__.py  _astrocyte.py  _discovery.py  config.py  errors.py  hybrid.py  mcp.py  portability.py  provider.py  types.py
astrocytes-py/tests/: conftest.py  test_access_grants_config.py  test_astrocyte_tier1.py  test_astrocyte_tier2.py  test_barriers.py  test_chunking.py  test_config.py  test_discovery_entry_points.py  test_errors.py  test_escalation.py  test_eval.py  test_eval_deepeval.py  test_fusion.py  test_homeostasis.py  test_hooks.py  test_hybrid_engine.py  test_integration_claude_agent_sdk.py  test_integrations.py  test_integrations_extended.py  test_integrations_wave2.py  test_mcp.py  test_multi_bank.py  test_observability.py  test_pipeline_stages.py  test_portability.py  test_profiles.py  test_quota.py  test_signal_quality.py  test_types.py
astrocytes-server-py/: Dockerfile  README.md  config.example.yaml  pyproject.toml
astrocytes-server-py/astrocytes_server/: __main__.py  app.py  brain.py  main.py  wiring.py
astrocytes-services-py/astrocytes-rest/: README.md  config.example.yaml  pyproject.toml
(+785 files in other folders)
