[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrocyte"
version = "0.2.0"
description = "Open-source memory framework for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Calvin Cheng", email = "linchuan.cheng@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Documentation = "https://astrocyteai.github.io/astrocyte/"
Homepage = "https://github.com/AstrocyteAI/astrocyte"
Issues = "https://github.com/AstrocyteAI/astrocyte/issues"
PyPI = "https://pypi.org/project/astrocyte/"
Repository = "https://github.com/AstrocyteAI/astrocyte"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
prometheus = [
    "prometheus-client>=0.20",
]
mcp = [
    "fastmcp>=3.0",
]
eval = [
    "deepeval>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "ruff>=0.4",
    "fastmcp>=3.0",
    "deepeval>=2.0",
]
all = [
    "astrocyte[otel,prometheus,mcp,eval]",
]

[project.scripts]
astrocyte-mcp = "astrocyte.mcp:main"

# Built-in dev / test providers (see `astrocyte._discovery` and `ecosystem-and-packaging.md`)
[project.entry-points."astrocyte.vector_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryVectorStore"

[project.entry-points."astrocyte.graph_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryGraphStore"

[project.entry-points."astrocyte.document_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryDocumentStore"

[project.entry-points."astrocyte.llm_providers"]
mock = "astrocyte.testing.in_memory:MockLLMProvider"

[tool.hatch.build.targets.wheel]
packages = ["astrocyte"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --timeout=60 --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
