[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "astrocyte"
dynamic = ["version"]
description = "Open-source memory framework for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Calvin Cheng", email = "linchuan.cheng@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Documentation = "https://astrocyteai.github.io/astrocyte/"
Homepage = "https://github.com/AstrocyteAI/astrocyte"
Issues = "https://github.com/AstrocyteAI/astrocyte/issues"
PyPI = "https://pypi.org/project/astrocyte/"
Repository = "https://github.com/AstrocyteAI/astrocyte"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
prometheus = [
    "prometheus-client>=0.20",
]
mcp = [
    "fastmcp>=3.0",
]
eval = [
    "deepeval>=2.0",
    # Porter stemmer used by the canonical LoCoMo judge
    # (astrocyte.eval.judges.locomo_judge). ~100 KB, pure-Python core
    # with optional C acceleration, stable API. Scoped to the `eval`
    # extra so runtime users don't pay for a benchmark-only dep.
    "snowballstemmer>=2.2",
]
openai = [
    "openai>=1.0",
]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
stream = [
    "astrocyte-ingestion-kafka>=0.1.0,<1",
    "astrocyte-ingestion-redis>=0.1.0,<1",
]
poll = [
    "astrocyte-ingestion-github>=0.1.0,<1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "pre-commit>=4.0",
    "fastmcp>=3.0",
    "deepeval>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "astrocyte-ingestion-kafka>=0.1.0,<1",
    "astrocyte-ingestion-redis>=0.1.0,<1",
    "astrocyte-ingestion-github>=0.1.0,<1",
    "snowballstemmer>=2.2",
]
all = [
    "astrocyte[otel,prometheus,mcp,eval,openai,gateway,stream,poll]",
]

[project.scripts]
astrocyte = "astrocyte.cli:main"
astrocyte-mcp = "astrocyte.mcp:main"

# Built-in dev / test providers (see `astrocyte._discovery` and `ecosystem-and-packaging.md`)
[project.entry-points."astrocyte.vector_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryVectorStore"

[project.entry-points."astrocyte.graph_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryGraphStore"

[project.entry-points."astrocyte.document_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryDocumentStore"

[project.entry-points."astrocyte.llm_providers"]
mock = "astrocyte.testing.in_memory:MockLLMProvider"
openai = "astrocyte.providers.openai:OpenAIProvider"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }  # Git root is one level up from astrocyte-py/

[tool.hatch.build.targets.wheel]
packages = ["astrocyte"]

[tool.hatch.build.targets.wheel.force-include]
"astrocyte/pipeline/extraction_builtin.yaml" = "astrocyte/pipeline/extraction_builtin.yaml"

[tool.uv.sources]
astrocyte-ingestion-kafka = { path = "../adapters-ingestion-py/astrocyte-ingestion-kafka", editable = true }
astrocyte-ingestion-redis = { path = "../adapters-ingestion-py/astrocyte-ingestion-redis", editable = true }
astrocyte-ingestion-github = { path = "../adapters-ingestion-py/astrocyte-ingestion-github", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --timeout=60 --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
