[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "astrocyte"
dynamic = ["version"]
description = "Open-source memory framework for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Calvin Cheng", email = "linchuan.cheng@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "h2>=4.3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Documentation = "https://astrocyteai.github.io/astrocyte/"
Homepage = "https://github.com/AstrocyteAI/astrocyte"
Issues = "https://github.com/AstrocyteAI/astrocyte/issues"
PyPI = "https://pypi.org/project/astrocyte/"
Repository = "https://github.com/AstrocyteAI/astrocyte"

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Built-in feature extras — pure framework code, no external adapter packages.
# ---------------------------------------------------------------------------
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
prometheus = [
    "prometheus-client>=0.20",
]
mcp = [
    "fastmcp>=3.0",
]
eval = [
    "deepeval>=2.0",
    # Porter stemmer used by the canonical LoCoMo judge
    # (astrocyte.eval.judges.locomo_judge). ~100 KB, pure-Python core
    # with optional C acceleration, stable API. Scoped to the `eval`
    # extra so runtime users don't pay for a benchmark-only dep.
    "snowballstemmer>=2.2",
]
openai = [
    "openai>=1.0",
]
rerank = [
    # Cross-encoder reranker backend (Hindsight parity). Pulls torch
    # transitively (~700 MB). Default model
    # ``cross-encoder/ms-marco-MiniLM-L-6-v2`` is ~80 MB, loaded
    # on-demand from HuggingFace on first reflect when
    # ``cross_encoder_rerank.enabled = true`` in config.
    "sentence-transformers>=2.2",
]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
worker = [
    "pgqueuer>=0.26.3",
]

# ---------------------------------------------------------------------------
# Per-adapter extras — each pulls exactly one published adapter package.
# Use these for thin installs (e.g. ``pip install astrocyte[postgres]``).
# ---------------------------------------------------------------------------
postgres = ["astrocyte-postgres>=0.8.0,<2"]
qdrant = ["astrocyte-qdrant>=0.1.0,<1"]
neo4j = ["astrocyte-neo4j>=0.1.0,<1"]
elasticsearch = ["astrocyte-elasticsearch>=0.1.0,<1"]
# litellm extra removed: ``astrocyte-llm-litellm`` is incompatible with the
# ``mcp`` extra. The adapter pins litellm to the secure-aiohttp window
# (1.83.5–1.83.7) per https://github.com/BerriAI/litellm/issues/26190, and
# litellm in that window pins ``python-dotenv==1.0.1`` while ``fastmcp>=3.0``
# (the mcp extra) requires ``python-dotenv>=1.1.0``. Declaring extras as
# mutually exclusive via [tool.uv] conflicts works for the direct pair
# (litellm vs mcp), but ``dev`` / ``bench`` / ``all`` transitively pull
# ``mcp``, which makes lockfile generation unmanageable.
#
# Until upstream litellm relaxes its dotenv pin (the parent issue), users
# who want LiteLLM install the adapter directly alongside astrocyte:
#
#     pip install astrocyte-stack astrocyte-llm-litellm
#
# Confirm your install does NOT also pull the mcp / fastmcp extras.
kafka = ["astrocyte-ingestion-kafka>=0.1.0,<1"]
redis = ["astrocyte-ingestion-redis>=0.1.0,<1"]
github = ["astrocyte-ingestion-github>=0.1.0,<1"]
s3-ingest = ["astrocyte-ingestion-s3>=0.1.0,<1"]
documents = ["astrocyte-ingestion-document>=0.1.0,<1"]
tavus = ["astrocyte-integration-tavus>=0.1.0,<1"]

# ---------------------------------------------------------------------------
# Aggregate / convenience extras
# ---------------------------------------------------------------------------
# ``default`` is the "just works" production stack. ``pip install astrocyte[default]``
# (or ``pip install astrocyte-stack``) gives you the Postgres-backed brain that
# the quick-start assumes.
default = ["astrocyte[postgres]"]

# ``stream`` / ``poll`` aliases retained for back-compat with docs and
# pre-0.14 installs. New code should prefer the narrow per-adapter extras.
stream = ["astrocyte[kafka,redis]"]
poll = ["astrocyte[github]"]

# ``all`` is everything published to PyPI today, except ``dev`` / ``bench``.
# Local-only adapters (``litellm``, ``s3-ingest``, ``documents``) are excluded
# until their publish workflows ship — otherwise ``pip install astrocyte[all]``
# from PyPI fails to resolve. The narrow per-adapter extras above keep working
# for in-repo dev via ``[tool.uv.sources]``.
all = [
    "astrocyte[otel,prometheus,mcp,eval,openai,rerank,gateway,worker,postgres,qdrant,neo4j,elasticsearch,kafka,redis,github,tavus]",
]

# ---------------------------------------------------------------------------
# Developer / contributor extras
# ---------------------------------------------------------------------------
# ``dev`` is the contributor default: test + lint + the built-in feature
# extras the unit-test suite actually imports (mcp, eval, gateway, worker).
# What it intentionally does NOT pull: external adapter packages (Postgres,
# Kafka, Redis, GitHub) or anything dragging torch (rerank). Those live in
# ``bench`` so plain unit-test CI doesn't pay for them. Pre-0.14 these
# were conflated, which is why ``dev`` used to be ~148 packages.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "pre-commit>=4.0",
    # Built-in feature extras that ``tests/test_mcp.py``,
    # ``tests/test_eval_judges.py`` etc. import directly.
    "astrocyte[mcp,eval,gateway,worker]",
]

# ``bench`` adds everything the ``make bench-*`` and weekly bench CI need:
# the real adapter stack the benches run against (Postgres + ingestion
# connectors), the OpenAI provider, and the R2 archive scripts' async
# S3 client. ``rerank`` (sentence-transformers/torch, ~700 MB) is opt-in
# even from bench — add ``[bench,rerank]`` when a config enables it.
bench = [
    "astrocyte[dev,postgres,openai,kafka,redis,github]",
    # R2 archive scripts (scripts/archive_bench_results.py et al.) — async S3 client.
    "aiobotocore>=2.13",
    # astrocyte-age removed in M9; see docs/_design/adr/adr-008-section-graph-replaces-age.md
]

[project.scripts]
astrocyte = "astrocyte.cli:main"
astrocyte-mcp = "astrocyte.mcp:main"

# Built-in dev / test providers (see `astrocyte._discovery` and `ecosystem-and-packaging.md`)
[project.entry-points."astrocyte.vector_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryVectorStore"

[project.entry-points."astrocyte.graph_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryGraphStore"

[project.entry-points."astrocyte.document_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryDocumentStore"

[project.entry-points."astrocyte.wiki_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryWikiStore"

[project.entry-points."astrocyte.mental_model_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryMentalModelStore"

[project.entry-points."astrocyte.source_stores"]
in_memory = "astrocyte.testing.in_memory:InMemorySourceStore"

[project.entry-points."astrocyte.pageindex_stores"]
in_memory = "astrocyte.testing.in_memory:InMemoryPageIndexStore"

[project.entry-points."astrocyte.llm_providers"]
mock = "astrocyte.testing.in_memory:MockLLMProvider"
openai = "astrocyte.providers.openai:OpenAIProvider"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }  # Git root is one level up from astrocyte-py/

[tool.hatch.build.targets.wheel]
packages = ["astrocyte"]

[tool.hatch.build.targets.wheel.force-include]
"astrocyte/pipeline/extraction_builtin.yaml" = "astrocyte/pipeline/extraction_builtin.yaml"

# Local-dev source resolution for sibling adapter packages. Every adapter
# referenced by an extra above must have either (a) an entry here OR (b)
# a published version on PyPI, otherwise lockfile generation fails.
[tool.uv.sources]
astrocyte-postgres = { path = "../adapters-storage-py/astrocyte-postgres", editable = true }
astrocyte-qdrant = { path = "../adapters-storage-py/astrocyte-qdrant", editable = true }
astrocyte-neo4j = { path = "../adapters-storage-py/astrocyte-neo4j", editable = true }
astrocyte-elasticsearch = { path = "../adapters-storage-py/astrocyte-elasticsearch", editable = true }
astrocyte-ingestion-kafka = { path = "../adapters-ingestion-py/astrocyte-ingestion-kafka", editable = true }
astrocyte-ingestion-redis = { path = "../adapters-ingestion-py/astrocyte-ingestion-redis", editable = true }
astrocyte-ingestion-github = { path = "../adapters-ingestion-py/astrocyte-ingestion-github", editable = true }
astrocyte-ingestion-s3 = { path = "../adapters-ingestion-py/astrocyte-ingestion-s3", editable = true }
astrocyte-ingestion-document = { path = "../adapters-ingestion-py/astrocyte-ingestion-document", editable = true }
astrocyte-integration-tavus = { path = "../adapters-integration-py/astrocyte-integration-tavus", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --timeout=60 --tb=short"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
