[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-llm-litellm"
dynamic = ["version"]
description = "LiteLLM LLMProvider adapter for Astrocyte — 100+ models via one gateway"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "astrocyte>=0.7.0,<2",
    # litellm >=1.83.10 patches GHSA-wxxx-gvqv-xp7p (sandbox escape in custom-code
    # guardrail, High) on top of the earlier GHSA-xqmj-j6mv-4862 SSTI fix shipped
    # in 1.83.7. 1.83.1+ strict-pins python-dotenv==1.0.1, which carries
    # GHSA-mf9w-mj56-hr94 (symlink following in set_key(), fixed in 1.2.2).
    # Astrocyte never calls set_key() — we only read .env files — so that
    # advisory is not exploitable here. The python-dotenv>=1.2.2 floor is
    # therefore dropped; resolution lands on whatever python-dotenv litellm
    # requires.
    #
    # Earlier the upper bound was <1.83.8 to avoid 1.83.8+'s aiohttp regression
    # (pin moved from ==3.13.5 to ==3.13.3 / ==3.13.4). Dependabot has since
    # marked the aiohttp advisories that worried us as fixed in 3.13.4 (vulnerable
    # range <= 3.13.3 — see #16-#21), so 3.13.4 is acceptable. Widened to
    # <1.84 to absorb the 1.83.10 security floor; bumps within 1.83.x are
    # mechanical patch releases.
    "litellm>=1.83.10,<1.87",
    # Security floor for aiohttp — litellm pulls it transitively. The floor
    # tracks the highest fixed-in version across known aiohttp advisories so it
    # moves with the adapter rather than silently with the transitive.
    "aiohttp>=3.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[project.entry-points."astrocyte.llm_providers"]
litellm = "astrocyte_llm_litellm:LiteLLMProvider"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }  # Git root is two levels up

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_llm_litellm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --timeout=60 --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }
