[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-qdrant"
version = "0.1.0"
description = "Qdrant VectorStore adapter for Astrocyte"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "astrocyte",
    "qdrant-client>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.entry-points."astrocyte.vector_stores"]
qdrant = "astrocyte_qdrant.store:QdrantVectorStore"

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_qdrant"]

[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
