[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-elasticsearch"
version = "0.1.0"
description = "Elasticsearch DocumentStore adapter for Astrocyte"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "astrocyte>=0.7.0,<0.9",
    "elasticsearch[async]>=8.12,<9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.entry-points."astrocyte.document_stores"]
elasticsearch = "astrocyte_elasticsearch.store:ElasticsearchDocumentStore"

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_elasticsearch"]

[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
