[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-postgres"
dynamic = ["version"]
description = "PostgreSQL adapter for Astrocyte (vector + document + wiki stores backed by pgvector and tsvector)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "astrocyte>=0.7.0,<2",
    "pgvector>=0.4",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[project.entry-points."astrocyte.vector_stores"]
postgres = "astrocyte_postgres.store:PostgresStore"

[project.entry-points."astrocyte.document_stores"]
postgres = "astrocyte_postgres.store:PostgresStore"

[project.entry-points."astrocyte.wiki_stores"]
postgres = "astrocyte_postgres.wiki_store:PostgresWikiStore"

[project.entry-points."astrocyte.mental_model_stores"]
postgres = "astrocyte_postgres.mental_model_store:PostgresMentalModelStore"

[project.entry-points."astrocyte.source_stores"]
postgres = "astrocyte_postgres.source_store:PostgresSourceStore"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }  # Git root is two levels up

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_postgres"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --timeout=60 --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }
