[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrocyte-gateway-py"
version = "0.1.0"
description = "Standalone HTTP gateway for Astrocyte (FastAPI over astrocyte-py); configure via astrocyte.yaml and optional mip.yaml"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "astrocyte>=0.8.0,<2",
    "cryptography>=42",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "astrocyte[worker]",
    "astrocyte-postgres",
    # astrocyte-age removed in M9; see ADR-008
    "psycopg[binary]>=3.1",
]
postgres = ["astrocyte-postgres"]
# `age` extra removed in M9 (see ADR-008)
worker = [
    "astrocyte[worker]",
    "psycopg[binary]>=3.1",
]
s3 = ["astrocyte-ingestion-s3"]
document = ["astrocyte-ingestion-document"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

# Local-dev source resolution — sibling packages resolve from this monorepo,
# not PyPI. The published wheel uses the version pin in [project.dependencies]
# (``astrocyte`` is on PyPI as of 0.13.1).
[tool.uv.sources]
astrocyte = { path = "../../astrocyte-py", editable = true }
astrocyte-postgres = { path = "../../adapters-storage-py/astrocyte-postgres", editable = true }
astrocyte-ingestion-s3 = { path = "../../adapters-ingestion-py/astrocyte-ingestion-s3", editable = true }
astrocyte-ingestion-document = { path = "../../adapters-ingestion-py/astrocyte-ingestion-document", editable = true }

[project.scripts]
astrocyte-gateway-py = "astrocyte_gateway.main:main"

[tool.hatch.build.targets.wheel]
packages = ["astrocyte_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
